--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +8,21 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+h1{
+  color: #333;
+  font-size: 5em;
+  font-weight: 300;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+.viewheight-centered-block{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.section{
+  padding: 100px 0;
 }
