Feat: some styling

--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,18 @@ h1{
 .section{
   padding: 100px 0;
 }
+a.achievement{
+  display: block;
+  text-decoration: none;
+  color: #333;
+  padding: 20px;
+}
+a.achievement:hover{
+  background-color: #3333331c;
+}
+a.achievement:hover{
+  display: block;
+  text-decoration: none;
+  color: #333;
+  padding: 20px;
+}
