--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+html{
+  scroll-behavior: smooth;
+}
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -9,13 +12,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-h1{
+h1,
+a.fp-title{
   color: #333;
   font-size: 5em;
   font-weight: 300;
   text-align: center;
   margin: 0;
   padding: 0;
+  text-decoration: none;
+}
+a.fp-title:hover{
+  text-decoration: underline;
 }
 .viewheight-centered-block{
   height: 100vh;
